welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:4: error: '(' expected but identifier found.
		{if num(i)==lookingFor
                    ^